# DocuAI

./: .gitignore  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  README.md  SECURITY.md  config.yaml  pipeline.py  pyproject.toml  requirements.txt  run_pipeline.py  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
docs/: README.md
docs/guides/: QUICKSTART.md
docs/implementation/: DELIVERY_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PROJECT_ARCHITECTURE.md
src/: __init__.py  config.py
src/audit/: __init__.py  auditor.py  format_detector.py  html_auditor.py  pdf_auditor.py  quality_scorer.py
src/chunking/: __init__.py
src/cleaning/: __init__.py  boilerplate_detector.py  cleaner.py  format_cleaners.py  tier1_heuristics.py  tier2_ml_scorer.py
src/dedup/: __init__.py  deduplicator.py  merge_knowledge.py  orchestrator.py  similarity_detector.py  validator.py
src/embedding/: __init__.py  chunk_manager.py  embedding_generator.py  orchestrator.py  retriever.py  vector_store.py
src/extraction/: __init__.py  extractor.py  metadata_extractor.py  structure_extractor.py  table_extractor.py
src/models/: __init__.py  chunk.py  document.py  retrieval_result.py
src/parsing/: __init__.py  csv_parser.py  html_parser.py  json_parser.py  parser.py  pdf_ocr_parser.py  pdf_parser.py  simple_parsers.py
src/rag/: __init__.py  api.py  chat_interface.py  cli_interface.py  flask_api.py  orchestrator.py  rag_answerer.py  rag_engine.py  ui.py
src/utils/: __init__.py  constants.py  file_handler.py  json_store.py  logger.py  time_tracker.py
